# TENGU

./: LICENSE  README.md  pyproject.toml  setup.py
TENGU/: __init__.py  cli.py  process.py  read.py  segmentation.py  utils.py  view.py
tengu/: __init__.py  cli.py
