[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TENGU"
version = "0.1.0"
description = "A transcriptomic-driven segmentation tool for Visium HD"
authors = [
    { name = "Visanu Wanchai", email = "vwanchai@uams.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Creative Commons :: Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pandas",
    "numpy",
]

[project.scripts]
tengu = "tengu.cli:main"

[project.urls]
Homepage = "https://github.com/visanuwan/TENGU"